# notty-community

./: README.md  dune-project
.github/workflows/: main.yml
src/: notty.ml
src-unix/: dune  notty_unix.ml
src-unix/native/: win_console.c  winsize.c
