(rule
  (with-stdout-to c_flags.cc (echo "(-Wall -Wextra -O3)")))

(rule
  (with-stdout-to c_flags.msvc (echo "(/W2 /Ox)")))

(library
  (public_name notty-community.unix)
  (synopsis "Notty Unix IO")
  (name notty_unix)
  (wrapped false)
  (foreign_stubs
    (language c)
    (names winsize win_console)
    (flags
      :standard
      (:include c_flags.%{ocaml-config:ccomp_type})))
  (optional)
  (libraries notty-community unix))

(include_subdirs unqualified)
